--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "formik": "^2.2.5",
     "react": "^17.0.1",
