--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.0",
     "date-fns": "^2.16.1",
     "formik": "^2.2.5",
+    "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
