--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
-    "yup": "^0.31.0"
+    "yup": "^0.31.0",
+    "zustand": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
