--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
+    "react-query": "^3.5.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.5",
     "styled-components": "^5.2.1",
