--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "date-fns": "^2.16.1",
     "formik": "^2.2.5",
     "history": "^5.0.0",
+    "i18next": "^19.8.7",
+    "i18next-browser-languagedetector": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
+    "react-i18next": "^11.8.5",
     "react-query": "^3.5.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.5",
+    "react-select": "^4.1.0",
     "styled-components": "^5.2.1",
     "yup": "^0.31.0",
     "zustand": "^3.2.0"
